--- a/docs/package.json
+++ b/docs/package.json
@@ -24,7 +24,7 @@
     "node": "^18.17.1 || ^20.3.0 || >=21.0.0"
   },
   "private": true,
-  "homepage": "https://github.com/delucis/astro-ai-robots-txt",
+  "homepage": "https://delucis.github.io/astro-ai-robots-txt/",
   "repository": {
     "type": "git",
     "url": "https://github.com/delucis/astro-ai-robots-txt.git",
