--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 	},
 	"packageManager": "pnpm@9.6.0",
 	"private": true,
-	"homepage": "https://github.com/delucis/astro-ai-robots-txt",
+	"homepage": "https://delucis.github.io/astro-ai-robots-txt/",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/delucis/astro-ai-robots-txt.git"
