--- a/packages/astro-ai-robots-txt/package.json
+++ b/packages/astro-ai-robots-txt/package.json
@@ -26,7 +26,7 @@
 	"publishConfig": {
 		"access": "public"
 	},
-	"homepage": "https://github.com/delucis/astro-ai-robots-txt",
+	"homepage": "https://delucis.github.io/astro-ai-robots-txt/",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/delucis/astro-ai-robots-txt.git",
